--- a/app/src/helpers/typography.scss
+++ b/app/src/helpers/typography.scss
@@ -1,36 +1,39 @@
+@use "../utilities/variables";
+@use "bulma/sass/utilities/mixins" as bulma-mx;
+
 // size
-@each $name, $size in $font-sizes {
+@each $name, $size in variables.$font-sizes {
   .text-#{$name} {
     font-size: $size !important;
   }
 }
 
-@include mobile {
-  @each $name, $size in $font-sizes {
+@include bulma-mx.mobile {
+  @each $name, $size in variables.$font-sizes {
     .text-#{$name}-mobile {
       font-size: $size !important;
     }
   }
 }
 
-@include tablet {
-  @each $name, $size in $font-sizes {
+@include bulma-mx.tablet {
+  @each $name, $size in variables.$font-sizes {
     .text-#{$name}-tablet {
       font-size: $size !important;
     }
   }
 }
 
-@include touch {
-  @each $name, $size in $font-sizes {
+@include bulma-mx.touch {
+  @each $name, $size in variables.$font-sizes {
     .text-#{$name}-touch {
       font-size: $size !important;
     }
   }
 }
 
-@include desktop {
-  @each $name, $size in $font-sizes {
+@include bulma-mx.desktop {
+  @each $name, $size in variables.$font-sizes {
     .text-#{$name}-desktop {
       font-size: $size !important;
     }
@@ -38,38 +41,38 @@
 }
 
 // weight
-@each $name, $weight in $font-weights {
+@each $name, $weight in variables.$font-weights {
   .text-#{$name} {
     font-weight: $weight !important;
   }
 }
 
-@include mobile {
-  @each $name, $weight in $font-weights {
+@include bulma-mx.mobile {
+  @each $name, $weight in variables.$font-weights {
     .text-#{$name}-mobile {
       font-weight: $weight !important;
     }
   }
 }
 
-@include tablet {
-  @each $name, $weight in $font-weights {
+@include bulma-mx.tablet {
+  @each $name, $weight in variables.$font-weights {
     .text-#{$name}-tablet {
       font-weight: $weight !important;
     }
   }
 }
 
-@include touch {
-  @each $name, $weight in $font-weights {
+@include bulma-mx.touch {
+  @each $name, $weight in variables.$font-weights {
     .text-#{$name}-touch {
       font-weight: $weight !important;
     }
   }
 }
 
-@include desktop {
-  @each $name, $weight in $font-weights {
+@include bulma-mx.desktop {
+  @each $name, $weight in variables.$font-weights {
     .text-#{$name}-desktop {
       font-weight: $weight !important;
     }
@@ -86,55 +89,55 @@ $alignments: ('center': 'center', 'justify': 'justify', 'left': 'left', 'right':
 }
 
 @each $alignment, $text-align in $alignments {
-  @include mobile {
+  @include bulma-mx.mobile {
     .text-#{$alignment}-mobile {
       text-align: #{$text-align} !important;
     }
   }
 
-  @include tablet {
+  @include bulma-mx.tablet {
     .text-#{$alignment}-tablet {
       text-align: #{$text-align} !important;
     }
   }
   
-  @include tablet-only {
+  @include bulma-mx.tablet-only {
     .text-#{$alignment}-tablet-only {
       text-align: #{$text-align} !important;
     }
   }
 
-  @include touch {
+  @include bulma-mx.touch {
     .text-#{$alignment}-touch {
       text-align: #{$text-align} !important;
     }
   }
 
-  @include desktop {
+  @include bulma-mx.desktop {
     .text-#{$alignment}-desktop {
       text-align: #{$text-align} !important;
     }
   }
 
-  @include desktop-only {
+  @include bulma-mx.desktop-only {
     .text-#{$alignment}-desktop-only {
       text-align: #{$text-align} !important;
     }
   }
 
-  @include widescreen {
+  @include bulma-mx.widescreen {
     .text-#{$alignment}-widescreen {
       text-align: #{$text-align} !important;
     }
   }
 
-  @include widescreen-only {
+  @include bulma-mx.widescreen-only {
     .text-#{$alignment}-widescreen-only {
       text-align: #{$text-align} !important;
     }
   }
   
-  @include fullhd {
+  @include bulma-mx.fullhd {
     .text-#{$alignment}-fullhd {
       text-align: #{$text-align} !important;
     }
