--- a/app/src/base/elements-spacing.scss
+++ b/app/src/base/elements-spacing.scss
@@ -1,16 +1,33 @@
+@use "sass:math";
+@use "../utilities/variables.scss";
+@use "bulma/sass/utilities/mixins" as bulma-mx;
+@use "bulma/sass/grid" as bulma-grid;
+
+$column-gap-mobile: math.div(variables.$block-spacing-mobile, 2) !default;
+
+$tile-spacing: math.div(variables.$block-spacing, 2) !default;
+$tile-spacing-mobile: math.div(variables.$block-spacing-mobile, 2) !default;
+
+$field-spacing: variables.$block-spacing !default;
+$field-spacing-mobile: variables.$block-spacing-mobile !default;
+$field-horizontal-spacing: variables.$brick-spacing !default;
+$field-horizontal-spacing-mobile: variables.$brick-spacing !default;
+
+$label-spacing: variables.$brick-spacing !default;
+
 // column
 .columns {
   &:not(:last-child) {
-    margin-bottom: $block-spacing - $column-gap;
+    margin-bottom: variables.$block-spacing - bulma-grid.$column-gap;
   }
   &.is-gapless {
     &:not(:last-child) {
-      margin-bottom: $block-spacing;
+      margin-bottom: variables.$block-spacing;
     }
   }
 }
 
-@include mobile {
+@include bulma-mx.mobile {
   .column {
     padding: $column-gap-mobile;
   }
@@ -23,11 +40,11 @@
       margin-bottom: (-$column-gap-mobile);
     }
     &:not(:last-child) {
-      margin-bottom: $block-spacing-mobile - $column-gap-mobile;
+      margin-bottom: variables.$block-spacing-mobile - $column-gap-mobile;
     }
     &.is-gapless {
       &:not(:last-child) {
-        margin-bottom: $block-spacing-mobile;
+        margin-bottom: variables.$block-spacing-mobile;
       }
     }
   }
@@ -48,7 +65,7 @@
   }
 }
 
-@include mobile {
+@include bulma-mx.mobile {
   .tile {
     &.is-ancestor {
       margin-left: $tile-spacing-mobile * -1;
@@ -58,7 +75,7 @@
         margin-bottom: $tile-spacing-mobile * -1;
       }
       &:not(:last-child) {
-        margin-bottom: $block-spacing-mobile;
+        margin-bottom: variables.$block-spacing-mobile;
       }
     }
     &.is-parent {
@@ -75,26 +92,26 @@
 
 // level
 .level-left {
-  @include mobile {
+  @include bulma-mx.mobile {
     & + .level-right {
-      margin-top: $block-spacing-mobile;
+      margin-top: variables.$block-spacing-mobile;
     }
   }
 }
 
 // hero
 .hero-buttons {
-  margin-top: $block-spacing;
-  @include mobile {
+  margin-top: variables.$block-spacing;
+  @include bulma-mx.mobile {
     .button {
       &:not(:last-child) {
-        margin-bottom: $block-spacing-mobile / 2;
+        margin-bottom: math.div(variables.$block-spacing-mobile, 2);
       }
     }
   }
-  @include tablet {
+  @include bulma-mx.tablet {
     .button:not(:last-child) {
-      margin-right: $block-spacing;
+      margin-right: variables.$block-spacing;
     }
   }
 }
@@ -111,12 +128,12 @@
 .field.is-grouped {
   & > .control {
     &:not(:last-child) {
-      margin-right: $block-spacing;
+      margin-right: variables.$block-spacing;
     }
   }
 }
 
-@include mobile {
+@include bulma-mx.mobile {
   .field:not(:last-child) {
     margin-bottom: $field-horizontal-spacing-mobile;
   }
@@ -126,16 +143,16 @@
   }
 }
 
-@include tablet {
+@include bulma-mx.tablet {
   .field-label {
-    margin-right: $block-spacing;
+    margin-right: variables.$block-spacing;
   }
 
   .field-body {
     flex-basis: auto;
     & > .field {
       &:not(:last-child) {
-        margin-right: $field-horizontal-spacing / 2;
+        margin-right: math.div($field-horizontal-spacing, 2);
       }
     }
   }
@@ -147,7 +164,7 @@
 }
 
 // button
-@mixin buttons-spacing($space: $brick-spacing) {
+@mixin buttons-spacing($space: variables.$brick-spacing) {
   .button {
     margin-bottom: $space;
   }
@@ -157,7 +174,7 @@
   }
 
   &:not(:last-child) {
-    margin-bottom: $block-spacing - $space;
+    margin-bottom: variables.$block-spacing - $space;
   }
 
   &:not(.has-addons) {
@@ -185,14 +202,14 @@
 }
 
 .buttons.is-spacing-2 {
-  @include buttons-spacing($brick-spacing * 2);
+  @include buttons-spacing(variables.$brick-spacing * 2);
 }
 
 .buttons.is-spacing-3 {
-  @include buttons-spacing($brick-spacing * 3);
+  @include buttons-spacing(variables.$brick-spacing * 3);
 }
 
 // other
 .help {
-  margin-top: $brick-spacing / 2;
+  margin-top: math.div(variables.$brick-spacing, 2);
 }
