--- a/app/src/components/tab.scss
+++ b/app/src/components/tab.scss
@@ -1,17 +1,20 @@
+@use "../utilities/variables";
+@use "bulma/sass/components/tabs" as bulma-tabs;
+
 $tabs-has-box-shadow-box: -2px 0px 0px -1px rgba(10, 10, 10, 0.1) !default;
 
-$tabs-sheet-link-background-color: $scheme-main-bis !default;
-$tabs-sheet-link-border-color: $border !default;
+$tabs-sheet-link-background-color: variables.$scheme-main-bis !default;
+$tabs-sheet-link-border-color: variables.$border !default;
 $tabs-sheet-link-border-style: solid !default;
 $tabs-sheet-link-border-width: 1px !default;
-$tabs-sheet-link-hover-background-color: $background !default;
-$tabs-sheet-link-hover-border-color: $border-hover !default;
-$tabs-sheet-link-active-color: $primary !default;
-$tabs-sheet-link-active-background-color: $scheme-main !default;
-$tabs-sheet-link-active-border-color: $border !default;
+$tabs-sheet-link-hover-background-color: variables.$background !default;
+$tabs-sheet-link-hover-border-color: variables.$border-hover !default;
+$tabs-sheet-link-active-color: variables.$primary !default;
+$tabs-sheet-link-active-background-color: variables.$scheme-main !default;
+$tabs-sheet-link-active-border-color: variables.$border !default;
 $tabs-sheet-link-active-border-bottom-color: transparent !default;
 
-$tab-highlight-border-color: $primary !default;
+$tab-highlight-border-color: variables.$primary !default;
 $tab-highlight-border-style: solid !default;
 $tab-highlight-border-width: 3px !default;
 
@@ -23,7 +26,7 @@ $tab-highlight-border-width: 3px !default;
       border-color: $tabs-sheet-link-border-color;
       border-style: $tabs-sheet-link-border-style;
       border-width: $tabs-sheet-link-border-width;
-      border-radius: $tabs-toggle-link-radius $tabs-toggle-link-radius 0 0;
+      border-radius: bulma-tabs.$tabs-toggle-link-radius bulma-tabs.$tabs-toggle-link-radius 0 0;
       background-color: $tabs-sheet-link-background-color;
 
       &:hover {
@@ -51,16 +54,16 @@ $tab-highlight-border-width: 3px !default;
       ul {
         // reverse
         border-bottom: 0;
-        border-top-color: $tabs-border-bottom-color;
-        border-top-style: $tabs-border-bottom-style;
-        border-top-width: $tabs-border-bottom-width;
+        border-top-color: bulma-tabs.$tabs-border-bottom-color;
+        border-top-style: bulma-tabs.$tabs-border-bottom-style;
+        border-top-width: bulma-tabs.$tabs-border-bottom-width;
       }
 
       a {
         // reverse
         margin-bottom: 0;
-        margin-top: -#{$tabs-border-bottom-width}; // to overlap ul border
-        border-radius: 0 0 $tabs-toggle-link-radius $tabs-toggle-link-radius;
+        margin-top: -#{bulma-tabs.$tabs-border-bottom-width}; // to overlap ul border
+        border-radius: 0 0 bulma-tabs.$tabs-toggle-link-radius bulma-tabs.$tabs-toggle-link-radius;
       }
 
       li {
@@ -82,7 +85,7 @@ $tab-highlight-border-width: 3px !default;
           border-top-width: $tab-highlight-border-width;
         }
 
-        @each $name, $pair in $colors {
+        @each $name, $pair in variables.$colors {
           $color: nth($pair, 1);
           $color-invert: nth($pair, 2);
           &.is-#{$name} {
@@ -106,7 +109,7 @@ $tab-highlight-border-width: 3px !default;
             border-bottom-width: $tab-highlight-border-width;
           }
 
-          @each $name, $pair in $colors {
+          @each $name, $pair in variables.$colors {
             $color: nth($pair, 1);
             $color-invert: nth($pair, 2);
             &.is-#{$name} {
