--- a/app/src/element/table.scss
+++ b/app/src/element/table.scss
@@ -1,15 +1,17 @@
+@use "../utilities/variables";
+
 .table {
 
   // row color
   tr {
-    @each $name, $pair in $colors {
+    @each $name, $pair in variables.$colors {
       $color: nth($pair, 1);
       $color-invert: nth($pair, 2);
       &.is-#{$name} {
         background: $color;
         th,td {
           color: $color-invert;
-          border-color: $border;
+          border-color: variables.$border;
         }
       }
     }
