--- a/app/src/helpers/color.scss
+++ b/app/src/helpers/color.scss
@@ -1,6 +1,8 @@
+@use "../utilities/variables";
+
 $link-decoration: underline !default;
 
-@each $name, $pair in $colors {
+@each $name, $pair in variables.$colors {
   $color: nth($pair, 1);
   .text-#{$name} {
     color: $color !important;
@@ -8,27 +10,27 @@ $link-decoration: underline !default;
 }
 
 .text {
-  color: $text !important;
+  color: variables.$text !important;
 }
 
 .text-invert {
-  color: $text-invert !important;
+  color: variables.$text-invert !important;
 }
 
 .text-strong {
-  color: $text-strong !important;
+  color: variables.$text-strong !important;
 }
 
 .text-light {
-  color: $text-light !important;
+  color: variables.$text-light !important;
 }
 
 .text-lighter {
-  color: $text-lighter !important;
+  color: variables.$text-lighter !important;
 }
 
 .text-disabled {
-  color: $text-disabled !important;
+  color: variables.$text-disabled !important;
 }
 
 .text-link {
@@ -38,17 +40,17 @@ $link-decoration: underline !default;
     color: currentColor !important;
   }
   &:hover {
-    color: $link-hover !important;
+    color: variables.$link-hover !important;
   }
 }
 
-@each $name, $pair in $colors {
+@each $name, $pair in variables.$colors {
   $color: nth($pair, 1);
   .bg-#{$name} {
     background-color: $color !important;
   }
 }
-@each $name, $shade in $shades {
+@each $name, $shade in variables.$shades {
   .bg-#{$name} {
     background-color: $shade !important;
   }
