--- a/app/src/helpers/other.scss
+++ b/app/src/helpers/other.scss
@@ -1,6 +1,10 @@
-$box-shadow-for-has-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default;
-$box-shadow-for-has-shadow-hovered: 1px 3px 10px 2px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default;
-$input-arrow-size: 0.625em !default;
+@use "sass:math";
+@use "../utilities/variables";
+@use "../utilities/mixins" as mx;
+@use "../form/shared" as form-shared;
+
+$box-shadow-for-has-shadow: 0 2px 3px rgba(variables.$black, 0.1), 0 0 0 1px rgba(variables.$black, 0.1) !default;
+$box-shadow-for-has-shadow-hovered: 1px 3px 10px 2px rgba(variables.$black, 0.1), 0 0 0 1px rgba(variables.$black, 0.1) !default;
 
 // Vertical Align: only affects inline, inline-block, inline-table, and table cell
 .is-vertical-top {
@@ -49,11 +53,11 @@ $input-arrow-size: 0.625em !default;
 }
 
 .is-control-height {
-  height: $control-height !important;
+  height: variables.$control-height !important;
 }
 
 .is-control-height-centered {
-  height: $control-height !important;
+  height: variables.$control-height !important;
   display: flex !important;
   align-items: center !important;
 }
@@ -101,32 +105,28 @@ $input-arrow-size: 0.625em !default;
 }
 
 .has-arrow-up::after {
-  @include has-arrow;
-  margin-top: #{$input-arrow-size / 2};
+  @include mx.has-arrow;
+  margin-top: math.div(form-shared.$input-arrow-size, 2);
   margin-left: 0.2em;
   transform: rotate(135deg);
-  display: block; // fix IE
 }
 
 .has-arrow-down::after {
-  @include has-arrow;
-  margin-bottom: #{$input-arrow-size / 2};
+  @include mx.has-arrow;
+  margin-bottom: math.div(form-shared.$input-arrow-size, 2);
   margin-left: 0.2em;
   transform: rotate(315deg);
-  display: block; // fix IE
 }
 
 .has-arrow-right::after {
-  @include has-arrow;
+  @include mx.has-arrow;
   margin-left: 0;
-  margin-left: #{(-$input-arrow-size / 2) + 0.2em};
+  margin-left: -(math.div(form-shared.$input-arrow-size, 2)) + 0.2em;
   transform: rotate(225deg);
-  display: block; // fix IE
 }
 
 .has-arrow-left::after {
-  @include has-arrow;
+  @include mx.has-arrow;
   margin-left: 0.2em;
   transform: rotate(45deg);
-  display: block; // fix IE
 }
