--- a/app/src/helpers/spacing.scss
+++ b/app/src/helpers/spacing.scss
@@ -1,3 +1,8 @@
+@use "../utilities/extends";
+@use "../utilities/mixins" as mx;
+@use "bulma/sass/utilities/extends" as bulma-extends;
+@use "bulma/sass/utilities/mixins" as bulma-mx;
+
 // brick
 .brick {
   @extend %brick;
@@ -21,37 +26,27 @@
   @extend %is-horizontal;
 }
 
-@include mobile {
+@include bulma-mx.mobile {
   .is-horizontal-mobile {
-    @include is-horizontal;
+    @include mx.is-horizontal;
   }
 }
 
-@include tablet {
+@include bulma-mx.tablet {
   .is-horizontal-tablet {
-    @include is-horizontal;
+    @include mx.is-horizontal;
   }
 }
 
-@include touch {
+@include bulma-mx.touch {
   .is-horizontal-touch {
-    @include is-horizontal;
+    @include mx.is-horizontal;
   }
 }
 
-@include desktop {
+@include bulma-mx.desktop {
   .is-horizontal-desktop {
-    @include is-horizontal;
-  }
-}
-
-// Missing on bulma 0.9.0
-@each $property, $shortcut in $spacing-shortcuts {
-  @each $name, $value in $spacing-values {
-    // All directions
-    .#{$shortcut}-#{$name} {
-      #{$property}: $value !important;
-    }
+    @include mx.is-horizontal;
   }
 }
 
