--- a/app/src/layout/tile.scss
+++ b/app/src/layout/tile.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .tile.is-mobile,
 .tile.is-mobile .tile {
   &:not(.is-child) {
@@ -5,7 +7,7 @@
     @for $i from 1 through 12 {
       &.is-#{$i} {
         flex: none;
-        width: ($i / 12) * 100%;
+        width: math.div($i, 12) * 100%;
       }
     }
   }
