--- a/app/src/lib/ngx-toastr.scss
+++ b/app/src/lib/ngx-toastr.scss
@@ -1,3 +1,5 @@
+@use "../utilities/variables";
+
 $toast-box-shadow: 0 0 7px #999999 !default;
 
 .toast-container .ngx-toastr {
@@ -11,7 +13,7 @@ $toast-box-shadow: 0 0 7px #999999 !default;
     text-shadow: none;
   }
 
-  @each $name, $pair in $colors {
+  @each $name, $pair in variables.$colors {
     $color: nth($pair, 1);
     $color-invert: nth($pair, 2);
 
