--- a/app/src/lib/tippy.scss
+++ b/app/src/lib/tippy.scss
@@ -1,9 +1,11 @@
-$tooltip-font-size: $size-normal !default;
-$tooltip-font-weight: $weight-normal !default;
-$tooltip-background-color: $scheme-main-ter !default;
-$tooltip-background-color-invert: $scheme-invert-ter !default;
-$tooltip-color: $text !default;
-$tooltip-color-invert: $text-invert !default;
+@use "../utilities/variables";
+
+$tooltip-font-size: variables.$size-normal !default;
+$tooltip-font-weight: variables.$weight-normal !default;
+$tooltip-background-color: variables.$scheme-main-ter !default;
+$tooltip-background-color-invert: variables.$scheme-invert-ter !default;
+$tooltip-color: variables.$text !default;
+$tooltip-color-invert: variables.$text-invert !default;
 $tooltip-border-color: rgba(0, 8, 16, 0.15) !default;
 $tooltip-box-shadow: 0 4px 14px -2px rgba(0, 8 , 16, .08) !default;
 $tooltip-border-radius: 4px !default;
@@ -105,7 +107,7 @@ $tooltip-arrow-size: 16px !default;
   color: $tooltip-color-invert;
 }
 
-@each $name, $pair in $colors {
+@each $name, $pair in variables.$colors {
   $color: nth($pair, 1);
   $color-invert: nth($pair, 2);
   .tippy-box[data-theme~='is-#{$name}'] {
