--- a/app/src/shape/triangle.scss
+++ b/app/src/shape/triangle.scss
@@ -1,3 +1,5 @@
+@use "../utilities/variables";
+
 .triangle-up {
   width: 0; 
   height: 0; 
@@ -6,7 +8,7 @@
   
   border-bottom: 0.5em solid black;
   
-  @each $name, $pair in $colors {
+  @each $name, $pair in variables.$colors {
     $color: nth($pair, 1);
     $color-invert: nth($pair, 2);
     &.is-#{$name} {
@@ -23,7 +25,7 @@
   
   border-top: 0.5em solid black;
 
-  @each $name, $pair in $colors {
+  @each $name, $pair in variables.$colors {
     $color: nth($pair, 1);
     $color-invert: nth($pair, 2);
     &.is-#{$name} {
@@ -40,7 +42,7 @@
   
   border-left: 0.5em solid black;
 
-  @each $name, $pair in $colors {
+  @each $name, $pair in variables.$colors {
     $color: nth($pair, 1);
     $color-invert: nth($pair, 2);
     &.is-#{$name} {
@@ -57,7 +59,7 @@
   
   border-right: 0.5em solid black; 
 
-  @each $name, $pair in $colors {
+  @each $name, $pair in variables.$colors {
     $color: nth($pair, 1);
     $color-invert: nth($pair, 2);
     &.is-#{$name} {
