--- a/app/src/trunks.scss
+++ b/app/src/trunks.scss
@@ -1,46 +1,177 @@
 @charset "utf-8";
+@use "sass:math";
 
 // custom variables, functions, mixins
-@import 'utilities/_all';
+@use "./utilities/variables";
+
+$section-gap: 24px !default;
 
 // bulma utilities
-@import "~bulma/sass/utilities/initial-variables";
-// @import "~bulma/sass/utilities/functions"; // extend
-@import "~bulma/sass/utilities/derived-variables";
-// @import "~bulma/sass/utilities/mixins"; // extend
-@import "~bulma/sass/utilities/controls";
-@import "~bulma/sass/utilities/extends";
+@forward "bulma/sass/utilities/initial-variables" with (
+  // Spacing
+  $block-spacing: variables.$block-spacing,
 
-// bulma base
-@import "~bulma/sass/base/_all";
+  // Weight
+  $weight-light: variables.$weight-light,
+  $weight-normal: variables.$weight-normal,
+  $weight-medium: variables.$weight-medium,
+  $weight-semibold: variables.$weight-semibold,
+  $weight-bold: variables.$weight-bold,
+
+  // Miscellaneous
+  $easing: variables.$easing,
+  $radius-small: variables.$radius-small,
+  $radius: variables.$radius,
+  $radius-large: variables.$radius-large,
+  $radius-rounded: variables.$radius-rounded,
+  $speed: variables.$speed,
+
+  // Black and White
+  $black: variables.$black,
+  $black-bis: variables.$black-bis,
+  $black-ter: variables.$black-ter,
+  $grey-darker: variables.$grey-darker,
+  $grey-dark: variables.$grey-dark,
+  $grey: variables.$grey,
+  $grey-light: variables.$grey-light,
+  $grey-lighter: variables.$grey-lighter,
+  $grey-lightest: variables.$grey-lightest,
+  $white-ter: variables.$white-ter,
+  $white-bis: variables.$white-bis,
+  $white: variables.$white,
+
+  // Color
+  $orange: variables.$orange,
+  $yellow: variables.$yellow,
+  $green: variables.$green,
+  $turquoise: variables.$turquoise,
+  $cyan: variables.$cyan,
+  $blue: variables.$blue,
+  $purple: variables.$purple,
+  $red: variables.$red,
+
+  // The container horizontal gap, which acts as the offset for breakpoints
+  $gap: $section-gap !default,
+
+  // Responsiveness
+  $tablet: variables.$tablet,
+  $desktop: variables.$desktop,
+  $widescreen: variables.$widescreen,
+  $widescreen-enabled: variables.$widescreen-enabled,
+  $fullhd: variables.$fullhd,
+  $fullhd-enabled: variables.$fullhd-enabled,
+
+  // Flags
+  $variable-columns: false !default,
+);
+
+// @forward "bulma/sass/utilities/functions";
+
+@forward "bulma/sass/utilities/derived-variables" with (
+  // Font size
+  $size-small: variables.$size-small,
+  $size-normal: variables.$size-normal,
+  $size-medium: variables.$size-medium,
+  $size-large: variables.$size-large,
+
+  // Meaning Colors
+
+  // General colors
+  $scheme-main: variables.$scheme-main,
+  $scheme-main-bis: variables.$scheme-main-bis,
+  $scheme-main-ter: variables.$scheme-main-ter,
+  $scheme-invert: variables.$scheme-invert,
+  $scheme-invert-bis: variables.$scheme-invert-bis,
+  $scheme-invert-ter: variables.$scheme-invert-ter,
+
+  $background: variables.$background,
+  $border: variables.$border,
+  $border-weak: variables.$border-weak,
+
+  // Text colors
+  $text: variables.$text,
+  $text-invert: variables.$text-invert,
+  $text-weak: variables.$text-weak,
+  $text-strong: variables.$text-strong,
+
+  // Default colors
+  $primary: variables.$primary,
+  $info: variables.$info,
+  $success: variables.$success,
+  $warning: variables.$warning,
+  $danger: variables.$danger,
+  $light: variables.$light,
+  $dark: variables.$dark,
+
+  // Link colors
+  $link: variables.$link,
+
+  // Colors & Shades
+  $custom-colors: variables.$custom-colors,
+  $custom-shades: variables.$custom-shades,
+
+  $colors: variables.$colors,
+
+  $shades: variables.$shades,
+);
+
+@forward "bulma/sass/utilities/controls" with (
+  $control-height: variables.$control-height,
+  $control-line-height: variables.$control-line-height,
+);
+
+// bulma others: order by https://github.com/jgthms/bulma/blob/main/sass/_index.scss
+@forward "bulma/sass/themes";
+@forward "bulma/sass/base" with (
+  $body-background-color: variables.$body-background-color,
+
+  // Root element size to calculate rem (in pixel)
+  $body-size: 10px !default,
+);
+@forward "bulma/sass/elements";
+@forward "bulma/sass/form";
+@forward "bulma/sass/components";
+@forward "bulma/sass/grid" with (
+  $column-gap: math.div(variables.$block-spacing, 2) !default,
+);
+@forward "bulma/sass/layout" with (
+  $section-padding: (variables.$block-spacing * 2) $section-gap !default,
+  $section-padding-desktop: (variables.$block-spacing * 2) $section-gap !default, // desktop only
+  $section-padding-medium: (variables.$block-spacing * 3) $section-gap !default, // desktop only
+  $section-padding-large: (variables.$block-spacing * 6) $section-gap !default, // desktop only
+);
+@forward "bulma/sass/base/skeleton";
 
 // bulma helpers
-// @import "~bulma/sass/helpers/color"; // rewrite
-// @import "~bulma/sass/helpers/flexbox"; // rewrite
-// @import "~bulma/sass/helpers/float"; // remove
-@import "~bulma/sass/helpers/other";
-// @import "~bulma/sass/helpers/overflow"; // rewrite
-@import "~bulma/sass/helpers/position";
-@import "~bulma/sass/helpers/spacing";
-// @import "~bulma/sass/helpers/typography"; // rewrite
-@import "~bulma/sass/helpers/visibility";
-
-// bulma others
-@import "~bulma/sass/elements/_all";
-@import "~bulma/sass/form/_all";
-@import "~bulma/sass/components/_all";
-@import "~bulma/sass/grid/_all";
-@import "~bulma/sass/layout/_all";
-
-// fix
-@import 'bulma-fix';
+@forward "bulma/sass/helpers/aspect-ratio";
+@forward "bulma/sass/helpers/border";
+// @forward "bulma/sass/helpers/color"; // rewrite
+// @forward "bulma/sass/helpers/flexbox"; // rewrite
+// @forward "bulma/sass/helpers/float"; // remove
+@forward "bulma/sass/helpers/gap";
+// @forward "bulma/sass/helpers/overflow"; // rewrite
+@forward "bulma/sass/helpers/position";
+@forward "bulma/sass/helpers/spacing" with (
+  // Spacing
+  $spacing-shortcuts: ("margin": "push", "padding": "pad") !default,
+  $spacing-directions: ("top": "-top", "right": "-right", "bottom": "-bottom", "left": "-left") !default,
+  $spacing-horizontal: "-x" !default,
+  $spacing-vertical: "-y" !default,
+  $spacing-values: ("0": 0, "1": variables.$square-size, "2": variables.$square-size * 2, "3": variables.$square-size * 3, "4": variables.$square-size * 4, "5": variables.$square-size * 5, "6": variables.$square-size * 6) !default,
+);
+// @import "bulma/sass/helpers/typography"; // rewrite
+@forward "bulma/sass/helpers/visibility";
+@forward "bulma/sass/helpers/other";
 
 // custom others
-@import 'base/_all';
-@import 'helpers/_all';
-@import 'layout/_all';
-@import 'element/_all';
-@import 'components/_all';
-@import 'form/_all';
-@import 'shape/_all';
-@import 'lib/_all';
+@forward "./base";
+@forward "./helpers";
+@forward "./layout";
+@forward "./element";
+@forward "./components";
+@forward "./form";
+@forward "./shape";
+@forward "./lib";
+
+// fix
+@forward "./bulma-fix";
