--- a/app/src/utilities/variables.scss
+++ b/app/src/utilities/variables.scss
@@ -1,8 +1,10 @@
+@import "bulma/sass/utilities/functions";
+
 // Square Size, Brick & Block Spacing
 $square-size: 1rem !default;
-$brick-spacing: $square-size  !default;
+$brick-spacing: $square-size !default;
 $block-spacing: $square-size * 2 !default;
-$block-spacing-mobile: $block-spacing  !default;
+$block-spacing-mobile: $block-spacing !default;
 
 // Control height
 $control-height: 4rem !default; // unit must same as Font size
@@ -57,6 +59,7 @@ $grey-dark: #4a4a4a !default;
 $grey: #7a7a7a !default;
 $grey-light: #b5b5b5 !default;
 $grey-lighter: #dbdbdb !default;
+$grey-lightest: #ededed !default;
 $white-ter: #f5f5f5 !default;
 $white-bis: #fafafa !default;
 $white: #ffffff !default;
@@ -74,63 +77,56 @@ $red: #ff3860 !default;
 // Meaning Colors
 
 // General colors
-$scheme-main: $white  !default;
-$scheme-main-bis: $white-bis  !default;
-$scheme-main-ter: $white-ter  !default;
-$scheme-invert: $black  !default;
-$scheme-invert-bis: $black-bis  !default;
-$scheme-invert-ter: $black-ter  !default;
+$scheme-main: $white !default;
+$scheme-main-bis: $white-bis !default;
+$scheme-main-ter: $white-ter !default;
+$scheme-invert: $black !default;
+$scheme-invert-bis: $black-bis !default;
+$scheme-invert-ter: $black-ter !default;
 
-$body-background-color: $scheme-main  !default;
-$background: $white-ter  !default;
-$border: $grey-lighter  !default;
-$border-hover: $grey-lighter  !default;
+$body-background-color: $scheme-main !default;
+$background: $white-ter !default;
+$border: $grey-lighter !default;
+$border-light: $grey-lighter !default;
+$border-weak: $border-light !default;
+$border-hover: $grey-lighter !default;
 
 // Text colors
-$text: $grey-dark  !default;
-$text-invert: $white  !default;
-$text-light: $grey  !default;
-$text-lighter: $grey-light  !default;
-$text-strong: $grey-darker  !default;
-$text-disabled: $grey-light  !default;
-
-@function findColorInvert($color)
-{
-  @if (colorLuminance($color) > 0.55)
-  {
-    @return $text;
-  }
-
-  @else
-  {
-    @return $text-invert;
-  }
-}
+$text: $grey-dark !default;
+$text-invert: $white !default;
+$text-light: $grey !default;
+$text-lighter: $grey-light !default;
+$text-weak: $text-light !default;
+$text-weaker: $text-lighter !default;
+$text-strong: $grey-darker !default;
+$text-disabled: $grey-light !default;
+$text-placeholder: $grey-lighter !default; // ~ rgba($text, 0.3)
+$text-disabled-placeholder: $grey-lightest !default;
 
 // Default colors
-$primary: $turquoise  !default;
-$secondary: $blue  !default;
-$info: $cyan  !default;
-$success: $green  !default;
-$warning: $yellow  !default;
-$danger: $red  !default;
-$light: $white-ter  !default;
-$dark: $grey-darker  !default;
+$primary: $turquoise !default;
+$secondary: $blue !default;
+$info: $cyan !default;
+$success: $green !default;
+$warning: $yellow !default;
+$danger: $red !default;
+$light: $white-ter !default;
+$dark: $grey-darker !default;
 
 // Default Invert colors
-$primary-invert: findColorInvert($primary) !default;
-$secondary-invert: findColorInvert($secondary) !default;
-$info-invert: findColorInvert($info) !default;
-$success-invert: findColorInvert($success) !default;
-$warning-invert: findColorInvert($warning) !default;
-$danger-invert: findColorInvert($danger) !default;
-$light-invert: findColorInvert($light) !default;
-$dark-invert: findColorInvert($dark) !default;
+$primary-invert: bulmaFindColorInvert($primary) !default;
+$secondary-invert: bulmaFindColorInvert($secondary) !default;
+$info-invert: bulmaFindColorInvert($info) !default;
+$success-invert: bulmaFindColorInvert($success) !default;
+$warning-invert: bulmaFindColorInvert($warning) !default;
+$danger-invert: bulmaFindColorInvert($danger) !default;
+$light-invert: bulmaFindColorInvert($light) !default;
+$dark-invert: bulmaFindColorInvert($dark) !default;
 
 // Link colors
-$link: $primary  !default;
-$link-invert: findColorInvert($link) !default;
-$link-visited: $link  !default;
+$link: $primary !default;
+$link-invert: bulmaFindColorInvert($link) !default;
+$link-visited: $link !default;
 
 $link-hover: invalid-color !default;
 $link-hover-border: invalid-color !default;
@@ -146,8 +142,8 @@ $custom-colors: null !default;
 $custom-shades: null !default;
 
 $colors: mergeColorMaps((
-  "white": ($white, findColorInvert($white)),
-  "black": ($black, findColorInvert($black)),
+  "white": ($white, bulmaFindColorInvert($white)),
+  "black": ($black, bulmaFindColorInvert($black)),
   "light": ($light, $light-invert),
   "dark": ($dark, $dark-invert),
   "primary": ($primary, $primary-invert),
